--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     #content img { 
       width: 100%;
       height: 25vh;
+      display: block;
       object-fit: cover;
     }
     #content.show {
